fix(style): fix horizontal scrollbar if scrollbars on

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   height: 100%;
-  min-width: 100vw;
+  width: 100%;
   display: flex;
   padding: 0 1rem;
   display: flex;
